--- a/disconf-web/bin/.gitignore
+++ b/disconf-web/bin/.gitignore
@@ -1,1 +1,12 @@
-db
+/target
+/.settings
+/.classpath
+/.project
+/log
+/pom.xml.releaseBackup
+/output
+/.pydevproject
+/*tmp
+/*.iml
+*.DS_Store
+.idea
